# water_rendering

./: .gitattributes  CMakeLists.txt  README.md
inc/: camera.hh  entity-renderer.hh  entity.hh  flat_vertices.hh  glob_conf.hh  light-renderer.hh  light.hh  main.hh  mesh.hh  model.hh  opengl-utils.hh  shader_m.hh  skybox-renderer.hh  skybox.hh  water-renderer.hh  water.hh  world-renderer.hh  world.hh
shaders/: light.fs  light.vs  model.vs  rock.fs  tree.fs  water.fs  water.vs  world.fs  world.vs
src/: camera.cc  entity-renderer.cc  entity.cc  glob_conf.cc  light-renderer.cc  light.cc  main.cc  mesh.cc  model.cc  opengl-utils.cc  shader_m.cc  skybox-renderer.cc  skybox.cc  water-renderer.cc  water.cc  world-renderer.cc  world.cc
